--- a/src/components/Admin/Catalog/SearchPanel/SearchPanel.module.css
+++ b/src/components/Admin/Catalog/SearchPanel/SearchPanel.module.css
@@ -5,3 +5,11 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.label {
+  font: 500 16px 'Inter', Arial, sans-serif;
+}
+
+.input {
+  margin: 0 10px;
+}
