--- a/src/common/colors/colors.css
+++ b/src/common/colors/colors.css
@@ -1,4 +1,14 @@
 :root {
   --color-primary: #06b6d4;
   --color-primary-hover: #0891b2;
+
+  --color-font-main: #0e0e0e;
+
+  --border-gray-first: #b0b0b0;
+  --border-gray-second: #7a7a7a;
+
+  --bgc-main: #fafafa;
+  --bgc-gray-one: #f0f0f0;
+
+  --color-error: #ff3939;
 }
