--- a/src/components/Admin/TopMenu/TopMenu.module.css
+++ b/src/components/Admin/TopMenu/TopMenu.module.css
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  background-color: #e7e7e7;
+  background-color: var(--bgc-gray-one);
   box-shadow: inset 0px 0px 13px 2px rgba(0, 0, 0, 0.3);
 }
 
