--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
 }
 
 body {
   font-size: 16px;
-  background-color: #f0f0f0;
+  background-color: var(--bgc-main);
   font-family: 'Inter', Arial, sans-serif;
   font-weight: 300;
 }
