--- a/src/components/Admin/Catalog/EditCardForm/UploadImage/UploadImage.css
+++ b/src/components/Admin/Catalog/EditCardForm/UploadImage/UploadImage.css
@@ -10,18 +10,33 @@
 }
 
 .upload-image_submit {
-  width: 200px;
-  height: 58px;
-  align-self: flex-end;
+  width: 230px;
+  padding: 10px 10px;
   border: none;
-  background-color: var(--color-primary);
-  font: var(--font-primary);
-  color: #fff;
+  border-radius: 10px;
+  font: 500 16px var(--font-family);
+  text-align: center;
+  color: rgb(255, 255, 255);
+  background-image: linear-gradient(rgb(14, 165, 233) 0%, rgb(2, 132, 199) 100%);
+  box-shadow: inset 0 2px 0 0 hsla(0, 0%, 100%, 0.2), inset 0 -1px 0 0 rgba(0, 0, 0, 0.25),
+    0 2px 6px 0 rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
 
 .upload-image_submit:hover {
-  background-color: var(--color-primary-hover);
+  background-image: linear-gradient(rgb(2, 132, 199) 0%, rgb(3, 105, 161) 100%);
+}
+
+.upload-image_submit:active {
+  background-image: linear-gradient(rgb(3, 105, 161) 0%, rgb(7, 89, 133) 100%);
+}
+
+.upload-image_submit:disabled {
+  color: rgb(56, 189, 248);
+  background-color: rgb(224, 242, 254);
+  background-image: none;
+  box-shadow: none;
+  cursor: auto;
 }
 
 .new-dispute-file__drop-zone {
