--- a/src/components/Admin/SiteSettings/News/AddNewsForm/AddNewsForm.module.css
+++ b/src/components/Admin/SiteSettings/News/AddNewsForm/AddNewsForm.module.css
@@ -15,6 +15,13 @@
   grid-template-columns: 230px auto;
 }
 
+.leftZone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
 .newsInfo {
   padding-left: 30px;
   border-left: 1px solid var(--border-gray-second);
@@ -89,4 +96,16 @@
 
 .btn:active {
   background-image: linear-gradient(rgb(3, 105, 161) 0%, rgb(7, 89, 133) 100%);
+}
+
+.btn:disabled {
+  color: rgb(56, 189, 248);
+  background-color: rgb(224, 242, 254);
+  background-image: none;
+  box-shadow: none;
+  cursor: auto;
+}
+
+.btn_small {
+  width: 200px;
 }
